--- a/examples/js/index.html
+++ b/examples/js/index.html
@@ -3,8 +3,30 @@
   <head>
     <meta charset="utf-8">
     <title>nosajio/modularscale examples Javascript</title>
+    <style media="screen">
+      .example-body {
+        width: 100%;
+        max-width: 700px;
+        font: 18px 'Georgia', serif;
+      }
+      
+      .heading-1,
+      .heading-2 {
+        font-weight: normal;
+      }
+    </style>
   </head>
   <body>
-    
+    <div class="example-body">
+      <h1 class="heading-1">Aa Bb Cc Dd Ee Ff Gg Hh Ii Jj Kk Ll Mm Nn Oo Pp Qq Rr Ss Tt Uu Vv Ww Xx Yy Zz</h1>
+      <h1 class="heading-2">Aa Bb Cc Dd Ee Ff Gg Hh Ii Jj Kk Ll Mm Nn Oo Pp Qq Rr Ss Tt Uu Vv Ww Xx Yy Zz</h1>
+      <div class="box-1"></div>
+      <div class="box-2"></div>
+      <div class="box-3"></div>
+      <div class="box-4"></div>
+      <div class="box-5"></div>
+    </div>
+    <!-- Import example script -->
+    <script type="text/javascript" src="./dist/example.js"></script>
   </body>
 </html>
